--- a/html/footer.html
+++ b/html/footer.html
@@ -1,7 +1,7 @@
 <div>
         <a href="{api_docs}">API</a>
          • 
-        <a href="https://github.com/AUTOMATIC1111/stable-diffusion-webui">Github</a>
+        <a href="https://github.com/A U T O M A T I C 1 1 1 1 / s t a b l e - d i f f u s i o n - w e b u i">Github</a>
          • 
         <a href="https://gradio.app">Gradio</a>
          • 
